--- a/index.html
+++ b/index.html
@@ -89,6 +89,32 @@
 
     </div>
 <!-- Next cards finish -->
-       
+<!-- hasanboy -->
+<div class="Leo">
+    <div class="cardM">
+        <img src="Photos/1-r.jpg" class="photo" alt="">
+        <div class="cardBody">
+            <div class="card-title_M">Redmi</div>
+            <div class="card-text_M"><p>* 4000 мА ч соответствует типичной емкости аккумулятора Redmi Note 8 2021.* Все примеры фотографий на этой странице сделаны с помощью Redmi Note 8* Если на странице продукта Redmi Note 8 2021 не указано иное, все данные получены из лабораторий Xiaomi, проектных технических характеристик и от поставщиков</p></div>
+            <a href="" class="s">batafsil...</a><br><br>
+        </div>
+    </div>
+    <div class="cardM">
+        <img src="Photos/2-r.jpg" class="photo" alt="">
+        <div class="cardBody">
+            <div class="card-title_M">Redmi</div>
+            <div class="card-text_M"><p>* 4000 мА ч соответствует типичной емкости аккумулятора Redmi Note 8 2021.* Все примеры фотографий на этой странице сделаны с помощью Redmi Note 8* Если на странице продукта Redmi Note 8 2021 не указано иное, все данные получены из лабораторий Xiaomi, проектных технических характеристик и от поставщиков</p></div>
+            <a href="" class="s">batafsil...</a><br><br>
+        </div>
+    </div>
+    <div class="cardM">
+        <img src="Photos/3-r.jpg" class="photo" alt="">
+        <div class="cardBody">
+            <div class="card-title_M">Redmi</div>
+            <div class="card-text_M"><p>* 4000 мА ч соответствует типичной емкости аккумулятора Redmi Note 8 2021.* Все примеры фотографий на этой странице сделаны с помощью Redmi Note 8* Если на странице продукта Redmi Note 8 2021 не указано иное, все данные получены из лабораторий Xiaomi, проектных технических характеристик и от поставщиков</p></div>
+            <a href="" class="s">batafsil...</a><br><br>
+        </div>
+    </div>
+</div>
 </body>
 </html>
