Axror cart jo'natdi

--- a/index.html
+++ b/index.html
@@ -197,6 +197,34 @@
 
     <script type="text/javascript" src="Module/Module.js"></script>
     <script type="text/javascript" src="Module/Module.min.js"></script>
+
+    <!--Axror-->
+<div class="addes">
+    <div class="adds">
+        <div class="add1">
+            <img src="1.jpg" alt="">
+            <h4>Maluba</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, excepturi ipsam voluptatem ullam laudantium obcaecati!</p>
+            <button>Tamom</button>
+        </div>
+    </div>
+    <div class="adds">
+        <div class="add1">
+            <img src="2.jpg" alt="">
+            <h4>Maluba</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, excepturi ipsam voluptatem ullam laudantium obcaecati!</p>
+            <button>Tamom</button>
+        </div>
+    </div>
+    <div class="adds">
+        <div class="add1">
+            <img src="3.jpg" alt="">
+            <h4>Maluba</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, excepturi ipsam voluptatem ullam laudantium obcaecati!</p>
+            <button>Tamom</button>
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
