--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="shoxrux.css">
 </head>
 
 <body style="background-color: antiquewhite;">
@@ -253,6 +254,50 @@
         </div>
     </div>
 </div>
+
+     <!--shoxruxCards-->
+     <div class="container22">
+
+        <div class="card22">
+          <div class="face face1">
+            <div class="content">
+              <span class="stars"></span>
+              <h2 class="java">JavaScript</h2>
+              <p class="java">JavaScript is a class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</p>
+            </div>
+          </div>
+          <div class="face face2">
+            <h1 class="textDecoration"><a href="https://learn.javascript.ru/"  class="textDecoration">JAVASCRIPT</a></h1>
+          </div>
+        </div>
+      
+        <div class="card22">
+          <div class="face face1">
+            <div class="content">
+              <span class="stars"></span>
+              <h2 class="python">Python</h2>
+              <p class="python">Python is an interpreted, high-level and general-purpose programming language.</p>
+            </div>
+          </div>
+          <div class="face face2">
+            <h1 class="textDecoration"><a href="https://www.python.org/"  class="textDecoration">PYHTON</a></h1>
+          </div>
+        </div>
+      
+        <div class="card22">
+          <div class="face face1">
+            <div class="content">
+              <span class="stars"></span>
+              <h2 class="cSharp">React</h2>
+              <p class="cSharp">JavaScript library for creating user interfaces</p>
+            </div>
+          </div>
+          <div class="face face2">
+            <h1 class="textDecoration"><a href="https://ru.reactjs.org/" class="textDecoration">REACT</a></h1>
+          </div>
+        </div>
+      </div>
+<!-- Next cards finish -->
 </body>
 
 </html>
